// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getElementPositionTopScreenNativeMobile should get the element position to the top of the screen for a mobile browser 1`] = `
Object {
  "height": 120,
  "width": 120,
  "x": 100,
  "y": 104,
}
`;

exports[`getElementPositionTopScreenNativeMobile should get the element position to the top of the screen for an app in landscape mode 1`] = `
Object {
  "height": 120,
  "width": 120,
  "x": 144,
  "y": 10,
}
`;

exports[`getElementPositionTopScreenNativeMobile should get the element position to the top of the screen for an app in portrait mode 1`] = `
Object {
  "height": 120,
  "width": 120,
  "x": 100,
  "y": 10,
}
`;
